--- a/reservation/reservation.html
+++ b/reservation/reservation.html
@@ -3,7 +3,7 @@
 	<head>
         <link rel="stylesheet" type="text/css" href="reservation.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <title>RailX</title>
+        <title>BellaRails</title>
     </head>
     <body>
 
@@ -171,7 +171,7 @@
     
     <div class="date_row">
         <div class="pre_date"><<</div>
-        <div id="date-selector"></div>
+            <div id="date-selector"></div>
         <div class="next_date">>></div>
     </div>
 
@@ -295,6 +295,7 @@
 
 
 <script src="reservation.js"></script>
+<!-- <script src="reservation_json.js"></script> -->
 </body>
 </html>
 
