--- a/pay/pay.html
+++ b/pay/pay.html
@@ -131,13 +131,13 @@
                     
                     
                     <div class="input-container ic2">
-                        <input id="phone" class="input" type="phone" placeholder=" " />
+                        <input id="phone"  maxlength="10" class="input" type="phone" placeholder=" " />
                         <div class="cut cut-short"></div>
                         <label for="phone" class="placeholder">Phone</>
                       </div>
 
                       <div class="input-container ic2">
-                        <input id="aadhar_no" class="input" type="number" placeholder=" " />
+                        <input id="aadhar_no" class="input" type="text" placeholder=" " maxlength="12"/>
                         <div class="cut cut-short" style="width: 76px;"></div>
                         <label for="aadhar_no" class="placeholder">Aadhar No </>
                     </div>
@@ -350,7 +350,7 @@
 
 <div class="tearms">
 
-    <p>Welcome to [Website Name], operated by [Company Name]. These Terms and Conditions govern your use of our website. By accessing or using our website, you agree to comply with these Terms and Conditions. Please read them carefully.</p>
+    <p>Welcome to RailX, These Terms and Conditions govern your use of our website. By accessing or using our website, you agree to comply with these Terms and Conditions. Please read them carefully.</p>
 
     <p><strong>1. Acceptance of Terms</strong></p>
     <p style="padding-top: 0px;">By accessing or using our website, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions. If you do not agree to these Terms and Conditions, please do not use our website.</p>
@@ -359,10 +359,10 @@
     <p style="padding-top: 0px;">You agree to use our website only for lawful purposes and in a manner that does not infringe upon the rights of others, restrict or inhibit anyone else's use or enjoyment of our website, or violate any applicable laws or regulations.</p>
 
     <p><strong>3. Intellectual Property</strong></p>
-    <p style="padding-top: 0px;">All content on our website, including but not limited to text, graphics, logos, images, audio clips, video clips, and data compilations, is the property of [Company Name] or its content suppliers and is protected by copyright laws. You may not reproduce, distribute, modify, or otherwise use any content from our website without the prior written consent of [Company Name].</p>
+    <p style="padding-top: 0px;">All content on our website, including but not limited to text, graphics, logos, images, audio clips, video clips, and data compilations, is the property of RailX or its content suppliers and is protected by copyright laws. You may not reproduce, distribute, modify, or otherwise use any content from our website without the prior written consent of RailX.</p>
 
     <p><strong>4. Limitation of Liability</strong></p>
-    <p style="padding-top: 0px;">Under no circumstances shall [Company Name] be liable for any direct, indirect, incidental, special, or consequential damages arising out of or in any way connected with your use of our website, whether based on warranty, contract, tort, or any other legal theory, even if [Company Name] has been advised of the possibility of such damages.</p>
+    <p style="padding-top: 0px;">Under no circumstances shall RailX be liable for any direct, indirect, incidental, special, or consequential damages arising out of or in any way connected with your use of our website, whether based on warranty, contract, tort, or any other legal theory, even if RailX has been advised of the possibility of such damages.</p>
 
     <p>By using our website, you agree to abide by these Terms and Conditions. If you do not agree with any part of these Terms and Conditions, please refrain from using our website.</p>
 
